--- a/src/app/modules/admin/components/admin-productos/admin-productos.component.html
+++ b/src/app/modules/admin/components/admin-productos/admin-productos.component.html
@@ -39,7 +39,7 @@
                 <button [routerLink]="['edit-producto', producto.idproductos]">
                     <img src="../../../../../assets/iconos/edit.svg" alt="Editar">
                 </button>
-                <button>
+                <button (click)="deleteProducto(producto.idproductos)">
                     <img src="../../../../../assets/iconos/delete.svg" alt="Eliminar">
                 </button>
             </td>
