--- a/src/app/modules/admin/components/admin-faq/admin-faq.component.html
+++ b/src/app/modules/admin/components/admin-faq/admin-faq.component.html
@@ -21,7 +21,7 @@
                 <button [routerLink]="['edit-faq', pregunta.idpreguntas]">
                     <img src="../../../../../assets/iconos/edit.svg" alt="Editar">
                 </button>
-                <button>
+                <button (click)="deletePregunta(pregunta.idpreguntas)">
                     <img src="../../../../../assets/iconos/delete.svg" alt="Eliminar">
                 </button>
             </td>
