--- a/src/app/modules/productos/components/items/items.component.css
+++ b/src/app/modules/productos/components/items/items.component.css
@@ -54,14 +54,10 @@ img {
 }
 
 .categorias > div {
-    cursor: pointer;
+    cursor: default;
     background-color: #eee;
     padding: 5px 7px;
     border-radius: 15px;
-}
-
-.categorias > div:hover {
-    background-color: #e6e6e6;
 }
 
 @keyframes mostrarTitle {
