--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -12,7 +12,7 @@
     </ul>
     <div class="iconos">
         <img src="../../../assets/iconos/bolsa.svg" alt="Bolsa">
-        <div class="cantidad">0</div>
-        <span class="precio">$0,00</span>
+        <div class="cantidad">{{cantidad}}</div>
+        <span class="precio">${{precio}}</span>
     </div>
 </div>
