--- a/src/app/modules/productos/components/producto-item/producto-item.component.html
+++ b/src/app/modules/productos/components/producto-item/producto-item.component.html
@@ -1,18 +1,18 @@
-<div class="item">
-    <img src="{{producto?.imagen}}" width="10%" alt="Almohadones">
+<div class="item" *ngIf="producto">
+    <img src="{{producto.imagen}}" width="10%" alt="Almohadones">
     <div class="info">
         <div>
-            <h3>{{producto?.nombre}}</h3>
-            <p>${{producto?.precio}}</p>
+            <h3>{{producto.nombre}}</h3>
+            <p>${{producto.precio}}</p>
             <div class="categorias">
-                <div *ngFor="let categoria of producto?.categorias">{{categoria.nombre}}</div>
+                <div *ngFor="let categoria of producto.categorias">{{categoria.nombre}}</div>
             </div>
-            <p *ngIf="producto && producto.cantidad > 5" class="stock">Stock disponible</p>
-            <p *ngIf="producto && producto.cantidad <= 5" class="stock">Últimas unidades!</p>
+            <p *ngIf="producto.cantidad > 5" class="stock">Stock disponible</p>
+            <p *ngIf="producto.cantidad <= 5" class="stock">Últimas unidades!</p>
         </div>
         <div class="botones">
             <button>Ver más</button>
-            <button>Agregar</button>
+            <button (click)="agregarCarrito(producto)">Agregar</button>
         </div>
     </div>
 </div>
