--- a/src/app/modules/productos/components/producto-item/producto-item.component.css
+++ b/src/app/modules/productos/components/producto-item/producto-item.component.css
@@ -51,3 +51,22 @@ button {
     border-radius: 15px;
     background-color: var(--main-color);
 }
+
+.botones > form > input {
+    font-size: 1rem;
+    border: #ccc 1px solid;
+    border-radius: 10px;
+    text-align: center;
+    padding: 10px;
+}
+
+input:focus {
+    outline: none;
+}
+
+.error {
+    font-size: 0.7rem;
+    min-width: 20%;
+    max-width: 20%;
+    font-weight: 600;
+}
