--- a/src/app/modules/admin/components/edit-productos/edit-productos.component.html
+++ b/src/app/modules/admin/components/edit-productos/edit-productos.component.html
@@ -1,16 +1,38 @@
 <div class="container">
     <form action="" [formGroup]="form">
-        <input type="text" placeholder="Nombre" formControlName="nombre">
-        <input type="number" placeholder="Precio" formControlName="precio">
-        <input type="number" placeholder="Cantidad" formControlName="cantidad">
-        <select name="categorias" id="categorias" title="categorias">
-            <option value="Muebles">Muebles</option>
-            <option value="Mesa">Mesa</option>
-            <option value="Almohadones">Almohadones</option>
-        </select>
-        <input type="text" placeholder="Link de imagen" formControlName="imagen">
-        <input type="text" placeholder="Descripción" formControlName="descripcion">
+        <div class="form">
+            <div class="input">
+                <label for="nombre">Nombre de producto</label>
+                <input type="text" id="nombre" formControlName="nombre">
+            </div>
+            <div class="input">
+                <label for="precio">Precio</label>
+                <input type="number" id="precio" formControlName="precio">
+            </div>
+            <div class="input">
+                <label for="cantidad">Cantidad</label>
+                <input type="number" id="cantidad" formControlName="cantidad">
+            </div>
+            <div class="input">
+                <label for="categorias">Categoria</label>
+                <select name="categorias" id="categorias" title="categorias">
+                    <option value="Muebles">Muebles</option>
+                    <option value="Mesa">Mesa</option>
+                    <option value="Almohadones">Almohadones</option>
+                </select>
+            </div>
+        </div>
+        <div class="link-input">
+            <label for="imagen">Link de imagen</label>
+            <input type="text" id="imagen" formControlName="imagen">
+        </div>
+        <div class="input">
+            <label for="descripcion">Descripción</label>
+            <textarea id="descripcion" formControlName="descripcion"></textarea>
+        </div>
+        <div class="botones">
+            <button type="submit">Guardar</button>
+            <button type="button" routerLink="../../">Cerrar</button>
+        </div>
     </form>
-    <button>Guardar</button>
-    <button routerLink="../../">Cerrar</button>
 </div>
