--- a/src/app/modules/admin/components/edit-acerca-de/edit-acerca-de.component.css
+++ b/src/app/modules/admin/components/edit-acerca-de/edit-acerca-de.component.css
@@ -46,3 +46,9 @@ textarea {
     padding-bottom: 10px;
     font-size: 0.8rem;
 }
+
+label {
+    display: block;
+    font-weight: 600;
+    padding: 5px 0;
+}
