--- a/src/app/modules/admin/components/admin-productos/admin-productos.component.html
+++ b/src/app/modules/admin/components/admin-productos/admin-productos.component.html
@@ -2,9 +2,10 @@
     <div class="title">
         <h2>Productos</h2>
         <div class="filtros">
-            <div class="selected">Todo</div>
             <div
                 *ngFor="let categoria of categorias"
+                (click)="cambiarOpcion(categoria.nombre)"
+                [ngClass]="{'selected': categoria.nombre == adminNavOpcion}"
             >{{categoria.nombre}}</div>
         </div>
         <button routerLink="add-producto">
@@ -13,9 +14,12 @@
     </div>
     <router-outlet></router-outlet>
     <div class="table">
+        <div *ngIf="productosFiltrados.length == 0">
+            No hay productos de {{adminNavOpcion}}
+        </div>
         <div 
             class="elemento"
-            *ngFor="let producto of productos"
+            *ngFor="let producto of productosFiltrados"
         >
             <div class="head_item">
                 <img src="{{producto.imagen}}" width="50px" height="50px" alt="imagen">
