--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,6 @@
 <div>
     <app-header></app-header>
+    <app-carrito *ngIf="carritoOpen == true"></app-carrito>
     <div class="main">
         <router-outlet></router-outlet>
     </div>
