--- a/src/app/components/carrito/carrito.component.css
+++ b/src/app/components/carrito/carrito.component.css
@@ -7,9 +7,50 @@
     padding: 20px;
     background-color: var(--main-color);
     border-radius: 10px 0 0 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.item,
+.info {
+    display: flex;
+    align-items: center;
+}
+
+.item {
+    padding: 20px 0;
+    border-bottom: 1px solid var(--second-color);
+    gap: 20px;
+}
+
+.icono {
+    width: 5px;
+    height: 5px;
+    border-radius: 50%;
+    background-color: #000;
+}
+
+.info {
+    width: 100%;
+    justify-content: space-between;
 }
 
 h5 {
     font-size: 1.1rem;
     font-weight: 600;
+}
+
+button {
+    cursor: pointer;
+    border-radius: 50%;
+    padding: 5px;
+    border: none;
+    text-align: center;
+    background-color: var(--second-color);
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+}
+
+button:active {
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
 }
