--- a/src/app/modules/admin/components/edit-faq/edit-faq.component.html
+++ b/src/app/modules/admin/components/edit-faq/edit-faq.component.html
@@ -18,7 +18,7 @@
         </div>
         <div class="botones">
             <button type="submit">Guardar</button>
-            <button type="button" routerLink="../../">Cerrar</button>
+            <button type="button" routerLink="/admin/dashboard/admin-faq">Cerrar</button>
         </div>
     </form>
 </div>
