--- a/src/app/modules/admin/components/edit-productos/edit-productos.component.html
+++ b/src/app/modules/admin/components/edit-productos/edit-productos.component.html
@@ -33,7 +33,7 @@
         </div>
         <div class="botones">
             <button type="submit">Guardar</button>
-            <button type="button" routerLink="../../">Cerrar</button>
+            <button type="button" routerLink="/admin/dashboard/admin-productos">Cerrar</button>
         </div>
     </form>
 </div>
