--- a/src/app/modules/admin/components/admin-productos/admin-productos.component.html
+++ b/src/app/modules/admin/components/admin-productos/admin-productos.component.html
@@ -25,7 +25,7 @@
                 <img src="{{producto.imagen}}" width="50px" height="50px" alt="imagen">
                 <h4>{{producto.nombre}}</h4>
                 <div class="botones">
-                    <button [routerLink]="['edit-producto', producto.idproductos]">
+                    <button [routerLink]="['/admin/dashboard/edit-producto', producto.idproductos]">
                         <img src="../../../../../assets/iconos/edit.svg" alt="Editar">
                     </button>
                     <button (click)="deleteProducto(producto.idproductos)">
