agregar monto de compra total en el carrito

--- a/src/app/components/carrito/carrito.component.html
+++ b/src/app/components/carrito/carrito.component.html
@@ -18,9 +18,10 @@
             </div>
         </div>
     </div>
-    <div>
+    <div class="footer">
         <button (click)="cerrarCarrito()">
             <img src="../../../assets/iconos/back.svg" alt="Volver">
         </button>
+        <p>Compra total ${{precio}}</p>
     </div>
 </div>
