--- a/src/app/components/carrito/carrito.component.css
+++ b/src/app/components/carrito/carrito.component.css
@@ -41,6 +41,12 @@ h5 {
     font-weight: 600;
 }
 
+.footer {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
 button {
     cursor: pointer;
     border-radius: 50%;
