sacar mail de contacto si no está cargado

--- a/src/app/modules/contacto/components/contacto/contacto.component.css
+++ b/src/app/modules/contacto/components/contacto/contacto.component.css
@@ -9,5 +9,9 @@ h3 {
 
 .info > p > .title {
     font-weight: 600;
-    font-size: 1.5;
+}
+
+.info > p {
+    font-size: 1.3rem;
+    padding: 10px 0;
 }
