--- a/src/app/modules/contacto/components/contacto/contacto.component.html
+++ b/src/app/modules/contacto/components/contacto/contacto.component.html
@@ -2,6 +2,6 @@
     <h3>Contacto</h3>
     <div class="info">
         <p *ngIf="nosotros?.telefono"><span class="title">Teléfono:</span> {{nosotros?.telefono}}</p>
-        <p><span class="title">Mail:</span> correo@correo.com</p>
+        <p *ngIf="nosotros?.mail"><span class="title">Mail:</span> {{nosotros?.mail}}</p>
     </div>
 </div>
