agregar nota si no hay productos disponibles2

--- a/src/app/modules/productos/components/items/items.component.html
+++ b/src/app/modules/productos/components/items/items.component.html
@@ -6,6 +6,7 @@
             <img src="../../../../../assets/iconos/lupa.svg" alt="">
         </form>
     </div>
+    <p *ngIf="productosFiltrados.length == 0">~ NO HAY PRODUCTOS DISPONIBLES ~</p>
     <app-producto-item
         *ngFor="let producto of productosFiltrados" 
         [producto]="producto"
