--- a/src/app/modules/productos/components/items/items.component.css
+++ b/src/app/modules/productos/components/items/items.component.css
@@ -33,6 +33,12 @@ form > img {
     transform: scale(0.6);
 }
 
+p {
+    font-size: 1.5rem;
+    text-align: center;
+    padding: 20px 0;
+}
+
 @keyframes mostrarTitle {
     0% {
         transform: translateX(-100%);
