--- a/src/app/components/carrito/carrito.component.css
+++ b/src/app/components/carrito/carrito.component.css
@@ -48,16 +48,26 @@ h5 {
     justify-content: space-between;
 }
 
-button {
+.cerrar,
+.comprar {
     cursor: pointer;
-    border-radius: 50%;
-    padding: 5px;
     border: none;
     text-align: center;
     background-color: var(--second-color);
+    padding: 5px;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
 }
 
-button:active {
+.cerrar {
+    border-radius: 50%;
+}
+
+.cerrar:active,
+.comprar:active {
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
+}
+
+.comprar {
+    border-radius: 10px;
+    margin-top: 10px;
 }
