--- a/src/app/components/carrito/carrito.component.css
+++ b/src/app/components/carrito/carrito.component.css
@@ -71,3 +71,9 @@ h5 {
     border-radius: 10px;
     margin-top: 10px;
 }
+
+.footer > div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
