--- a/src/app/components/carrito/carrito.component.html
+++ b/src/app/components/carrito/carrito.component.html
@@ -25,7 +25,7 @@
         </button>
         <div>
             <p>Compra total ${{precio}}</p>
-            <button class="comprar" *ngIf="productos.length > 0">Comprar</button>
+            <button class="comprar" *ngIf="productos.length > 0" routerLink="/comprar">Comprar</button>
         </div>
     </div>
 
