--- a/src/app/modules/compra/components/compra/compra.component.html
+++ b/src/app/modules/compra/components/compra/compra.component.html
@@ -1,1 +1,24 @@
-<p>compra works!</p>
+<div class="container">
+    <div class="compra">
+        <h4>Compra</h4>
+        <p>Elegir una opción para el pago. El envío se debe arreglar con el vendedor</p>
+        <form action="">
+            <div>
+                <input type="radio" name="pago" id="pagina">
+                <label for="pagina">Pagar en la página</label>
+            </div>
+            <div>
+                <input type="radio" name="pago" id="acordar">
+                <label for="acordar">Acordar con vendedor</label>
+            </div>
+        </form>
+        <button>Avanzar</button>
+    </div>
+    <div class="productos">
+        <h4>Productos</h4>
+        <div class="producto" *ngFor="let producto of productos">
+            <p>{{producto.nombre}}</p>
+            <p>{{producto.cantidad}}</p>
+        </div>
+    </div>
+</div>
