--- a/src/app/components/carrito/carrito.component.css
+++ b/src/app/components/carrito/carrito.component.css
@@ -36,9 +36,31 @@
     justify-content: space-between;
 }
 
+.info > div > p {
+    text-align: end;
+    margin-bottom: 5px;
+}
+
 h5 {
     font-size: 1.1rem;
     font-weight: 600;
+}
+
+.eliminar_container {
+    display: flex;
+    gap: 5px;
+}
+
+form > input {
+    font-size: 0.7rem;
+    border: #ccc 1px solid;
+    border-radius: 10px;
+    text-align: center;
+    padding: 5px;
+}
+
+input:focus {
+    outline: none;
 }
 
 .footer {
@@ -49,7 +71,8 @@ h5 {
 }
 
 .cerrar,
-.comprar {
+.comprar,
+.eliminar {
     cursor: pointer;
     border: none;
     text-align: center;
@@ -63,12 +86,17 @@ h5 {
 }
 
 .cerrar:active,
-.comprar:active {
+.comprar:active,
+.eliminar:active {
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
 }
 
-.comprar {
+.comprar,
+.eliminar {
     border-radius: 10px;
+}
+
+.comprar {
     margin-top: 10px;
 }
 
