--- a/src/app/components/carrito/carrito.component.html
+++ b/src/app/components/carrito/carrito.component.html
@@ -4,7 +4,7 @@
         <p *ngIf="productos.length == 0">~ No hay productos seleccionados ~</p>
         <div
             class="item"
-            *ngFor="let producto of productos"    
+            *ngFor="let producto of productos, index as i"    
         >
             <div class="icono"></div>
             <div class="info">
@@ -24,7 +24,7 @@
                                 max="{{producto.cantidad}}"
                             >
                         </form>
-                        <button class="eliminar" (click)="eliminarDeCarrito(1, producto)">Eliminar</button>
+                        <button class="eliminar" (click)="eliminarDeCarrito(i, 1, producto)">Eliminar</button>
                     </div>
                 </div>
             </div>
