agregar funcion de busqueda por nombre en el service

--- a/src/app/modules/productos/components/items/items.component.css
+++ b/src/app/modules/productos/components/items/items.component.css
@@ -28,9 +28,11 @@ input:focus {
     outline: none;
 }
 
-form > img {
+button {
     cursor: pointer;
+    border: none;
     transform: scale(0.6);
+    background-color: transparent;
 }
 
 p {
