--- a/src/app/modules/productos/components/items/items.component.html
+++ b/src/app/modules/productos/components/items/items.component.html
@@ -1,9 +1,11 @@
 <div class="container">
     <div class="title">
         <h2>{{navOpcion}}</h2>
-        <form action="">
-            <input type="text" placeholder="Buscar...">
-            <img src="../../../../../assets/iconos/lupa.svg" alt="">
+        <form action="" [formGroup]="buscar" (submit)="buscarPorNombre()">
+            <input type="text" placeholder="Buscar..." formControlName="nombre">
+            <button type="submit">
+                <img src="../../../../../assets/iconos/lupa.svg" alt="Buscar">
+            </button>
         </form>
     </div>
     <p *ngIf="productosFiltrados.length == 0">~ NO HAY PRODUCTOS DISPONIBLES ~</p>
