editar productos para tener unicamente una categoria y agregar funcion para agregar productos

--- a/src/app/components/carrito/carrito.component.html
+++ b/src/app/components/carrito/carrito.component.html
@@ -11,7 +11,7 @@
                 <div>
                     <h5>{{producto.nombre}}</h5>
                     <h5>Cantidad: {{producto.cantidad}}</h5>
-                    <div class="categoria" *ngFor="let categoria of producto.categorias">{{categoria.nombre}}</div>
+                    <div class="categoria">{{producto.categoria.nombre}}</div>
                 </div>
                 <div>
                     <p>$ {{producto.precio * producto.cantidad}}</p>
