--- a/src/app/modules/admin/components/admin-productos/admin-productos.component.html
+++ b/src/app/modules/admin/components/admin-productos/admin-productos.component.html
@@ -44,9 +44,7 @@
                 </div>
                 <div class="item">
                     <h4>Categorias</h4>
-                    <p *ngFor="let categoria of producto.categorias">
-                        {{categoria.nombre}}
-                    </p>
+                    <p>{{producto.categoria.nombre}}</p>
                 </div>
                 <div class="item">
                     <h4>Link de imagen</h4>
