--- a/src/app/modules/admin/components/edit-productos/edit-productos.component.css
+++ b/src/app/modules/admin/components/edit-productos/edit-productos.component.css
@@ -22,7 +22,8 @@ form {
 }
 
 input,
-textarea {
+textarea,
+select {
     border: none;
     background-color: #eee;
     padding: 5px 10px;
@@ -34,7 +35,8 @@ textarea {
 }
 
 input:focus,
-textarea:focus {
+textarea:focus,
+select:focus {
     outline: none;
 }
 
