--- a/src/app/modules/admin/components/add-productos/add-productos.component.html
+++ b/src/app/modules/admin/components/add-productos/add-productos.component.html
@@ -27,10 +27,10 @@
             </div>
             <div class="input">
                 <label for="categorias">Categoria</label>
-                <select name="categorias" id="categorias" title="categorias" formControlName="categorias">
+                <select name="categorias" id="categorias" title="categorias" formControlName="categoria">
                     <option
                         *ngFor="let categoria of categorias"
-                        value="{{categoria.nombre}}"
+                        value="{{categoria.idcategorias}}"
                     >{{categoria.nombre}}</option>
                 </select>
                 <p 
