--- a/src/app/modules/admin/components/edit-productos/edit-productos.component.html
+++ b/src/app/modules/admin/components/edit-productos/edit-productos.component.html
@@ -1,31 +1,51 @@
 <div class="container">
-    <form action="" [formGroup]="form">
+    <form action="" [formGroup]="form" (submit)="editarProducto($event)">
         <div class="form">
             <div class="input">
                 <label for="nombre">Nombre de producto</label>
                 <input type="text" id="nombre" formControlName="nombre">
+                <p 
+                    *ngIf="form.get('nombre')?.hasError('required') && form.get('nombre')?.touched"
+                    class="error"
+                >Se necesita un nombre</p>
             </div>
             <div class="input">
                 <label for="precio">Precio</label>
                 <input type="number" id="precio" formControlName="precio">
+                <p 
+                    *ngIf="form.get('precio')?.hasError('required') && form.get('precio')?.touched"
+                    class="error"
+                >Se necesita un precio</p>
             </div>
             <div class="input">
                 <label for="cantidad">Cantidad</label>
                 <input type="number" id="cantidad" formControlName="cantidad">
+                <p 
+                    *ngIf="form.get('cantidad')?.hasError('required') && form.get('cantidad')?.touched"
+                    class="error"
+                >Se necesita una cantidad</p>
             </div>
             <div class="input">
                 <label for="categorias">Categoria</label>
-                <select name="categorias" id="categorias" title="categorias" formControlName="categorias">
+                <select name="categorias" id="categorias" title="categorias" formControlName="categoria">
                     <option
                         *ngFor="let categoria of categorias"
-                        value="{{categoria.nombre}}"
+                        value="{{categoria.idcategorias}}"
                     >{{categoria.nombre}}</option>
                 </select>
+                <p 
+                    *ngIf="form.get('categorias')?.hasError('required') && form.get('categorias')?.touched"
+                    class="error"
+                >Se necesita una categoría</p>
             </div>
         </div>
         <div class="link-input">
             <label for="imagen">Link de imagen</label>
             <input type="text" id="imagen" formControlName="imagen">
+            <p 
+                *ngIf="form.get('imagen')?.hasError('required') && form.get('imagen')?.touched"
+                class="error"
+            >Se necesita una imagen</p>
         </div>
         <div class="input">
             <label for="descripcion">Descripción</label>
